--- a/public/index.css
+++ b/public/index.css
@@ -2,3 +2,14 @@
 	padding: 0;
 	margin: 0;
 }
+
+div#header {
+	width: 100%;
+	height: 50px;
+	background-color: #363636;
+	color: #FFF;
+	text-shadow: 0 0 5px #FFF;
+	font: bold 35px Consolas;
+	text-align: center;
+	line-height: 50px;
+}
