--- a/public/index.css
+++ b/public/index.css
@@ -7,9 +7,116 @@ div#header {
 	width: 100%;
 	height: 50px;
 	background-color: #363636;
+	position: absolute;
+	left: 0;
+	top: 0;
 	color: #FFF;
 	text-shadow: 0 0 5px #FFF;
 	font: bold 35px Consolas;
 	text-align: center;
 	line-height: 50px;
+}
+
+div#header > a#quit {
+	position: absolute;
+	right: 5px;
+	top: 50%;
+	transform: translateY( -50% );
+	font: bold 20px Consolas;
+	color: #FFF;
+	text-decoration: none;
+	transition: all .1s linear 0s;
+}
+
+div#header > a#quit:hover {
+	color: #F00;
+}
+
+div#chat {
+	width: 100%;
+	position: absolute;
+	left: 0;
+	top: 50px;
+	background-color: rgba( 36, 36, 36, .5 );
+	overflow: scroll;
+}
+
+div#chat::-webkit-scrollbar {
+	width: 10px;
+}
+
+div#chat::-webkit-scrollbar-track {
+	background-color: rgba( 36, 36, 36, .05 );
+}
+
+div#chat::-webkit-scrollbar-thumb {
+	background-color: #363636;
+	border-radius: 10px;
+}
+
+.computerMessage {
+	display: block;
+	margin: 10px 5px 0 5px;
+}
+
+.computerMessage > img {
+	float: left;
+	margin: 0;
+	border-radius: 100%;
+}
+
+.computerMessage > p {
+	border-radius: 10px;
+	margin-right: 55px;
+	margin-left: 55px;
+	padding: 15px;
+	font: bold 20px "幼圆";
+	color: #FFF;
+	border: 3px solid pink;
+	letter-spacing: .1em;
+}
+
+.userMessage {
+	display: block;
+	margin: 10px 5px 0 5px;
+}
+
+.userMessage > img {
+	float: right;
+	margin: 0;
+	border-radius: 100%;
+}
+
+.userMessage > p {
+	margin: 0 55px 0 55px;
+	padding: 15px;
+	color: #FFF;
+	text-align: right;
+	font: bold 20px "幼圆";
+	letter-spacing: .1em;
+	border: 3px solid #363636;
+	border-radius: 10px;
+}
+
+div#type {
+	width: 100%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+
+textarea#message {
+	display: block;
+	width: 98%;
+	height: 98%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	resize: none;
+	font: bold 20px Consolas;
+	color: #FFF;
+	border: 0;
+	box-shadow: 0 0 0 2px gray inset;
+	padding: 1%;
+	background-color: #363636;
 }
